--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  padding-left: 20px;
+}
+
 .row {
   float: left;
   clear: both;
@@ -32,4 +36,8 @@ button {
   height: 71px;
   width: 216px;
   float: right;
+}
+
+button:hover {
+	background: lightblue;
 }
